fix icon spacing and highlight behavior

--- a/sass/px-deck-selector.scss
+++ b/sass/px-deck-selector.scss
@@ -28,7 +28,7 @@
   --iron-icon-width: $inuit-base-font-size;
 }
 
-iron-icon {
+px-icon {
   margin-left: 5px;
 }
 
